# rocm-libraries

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Dockerfile.manylinux  Dockerfile.pytorch  Jenkinsfile  README.md  codecov.yml  install.sh  requirements.txt  requiretments.txt  rtest.xml
backend/tests/: CMakeLists.txt  TestEnginePlugin.cpp  TestPlugin.cpp  test_engine_plugin.cpp  test_engine_plugin_resource_manager.cpp  test_flatbuffer_utilities.cpp  test_hello_world.cpp  test_plugin.cpp  test_shared_library.cpp
backend/tests/descriptors/: FlatbufferTestUtils.hpp  TestEngineDescriptor.cpp  TestEngineHeuristicDescriptor.cpp  TestExecutionPlanDescriptor.cpp  TestGraphDescriptor.cpp  flatbuffer_test_utils.hpp  test_backend_descriptor.cpp  test_descriptor_factory.cpp  test_descriptor_utils.hpp  test_engine_config_descriptor.cpp  test_engine_descriptor.cpp  test_engine_heuristic_descriptor.cpp  test_execution_plan_descriptor.cpp  test_graph_descriptor.cpp  test_variant_pack.cpp
backend/tests/descriptors/mocks/: mock_descriptor.cpp  mock_descriptor.hpp
backend/tests/plugins/: engine_plugin1.cpp  engine_plugin2.cpp  plugin1.cpp  plugin2.cpp
dnn-providers/hipblaslt-provider/tests/: CMakeLists.txt  TestHipblasltEngineManager.cpp  TestHipblasltEnginePluginApi.cpp  TestHipblasltHipdnnEnginePluginHandle.cpp  TestHipblasltHipdnnPluginExecutionContext.cpp  TestHipblasltMatmulDesc.cpp  TestHipblasltMatrixLayout.cpp  TestHipblasltPluginApi.cpp  TestHipblasltUtils.cpp
dnn-providers/hipblaslt-provider/tests/common/: MatmulCommon.hpp
dnn-providers/hipblaslt-provider/tests/engines/: TestHipblasltEngine.cpp
dnn-providers/hipblaslt-provider/tests/mocks/: MockEngine.hpp  MockPlanBuilder.hpp
frontend/: CMakeLists.txt
frontend/include/hipdnn_frontend/: Graph.hpp  Types.hpp  Utilities.hpp  error.hpp  graph.hpp  types.hpp  utilities.hpp
frontend/include/hipdnn_frontend/attributes/: BatchnormInferenceAttributes.hpp  batchnorm_attributes.hpp  batchnorm_inference_attributes.hpp  pointwise_attributes.hpp  tensor_attributes.hpp
frontend/include/hipdnn_frontend/backend/: ScopedHipdnnBackendDescriptor.hpp
frontend/include/hipdnn_frontend/node/: BatchnormInferenceNode.hpp  BatchnormNode.hpp  Node.hpp  batchnorm_inference_node.hpp  batchnorm_node.hpp  pointwise_node.hpp
frontend/python/: CMakeLists.txt  attributes.cpp  hipdnn.cpp  types.cpp
frontend/python/tests/: CMakeLists.txt
frontend/tests/: CMakeLists.txt  TestBatchnormAttributes.cpp  TestBatchnormBackwardAttributes.cpp  TestBatchnormBackwardNode.cpp  TestBatchnormInferenceAttributes.cpp  TestBatchnormInferenceNode.cpp  TestBatchnormNode.cpp  TestConvolutionFwdAttributes.cpp  TestConvolutionNode.cpp  TestError.cpp  TestGraph.cpp  TestPointwiseAttributes.cpp  TestPointwiseNode.cpp  TestScopedHipdnnBackendDescriptor.cpp  TestTensorAttributes.cpp  TestTensorValueAttributes.cpp  TestUtilities.cpp  main.cpp  test_batchnorm_inference_node.cpp  test_batchnorm_node.cpp  test_graph.cpp  test_hipdnn_frontend_api.cpp  test_pointwise_node.cpp  test_types.cpp
plugins/miopen_legacy_plugin/: CMakeLists.txt  MiopenLegacyPlugin.cpp  hipdnn_engine_plugin_handle.hpp  miopen_container.cpp  miopen_legacy_plugin.cpp
plugins/miopen_legacy_plugin/engines/: miopen_engine.cpp
plugins/miopen_legacy_plugin/engines/plans/: MiopenConvFwdPlan.cpp
plugins/miopen_legacy_plugin/integration_tests/: IntegrationGpuBatchnormBackward.cpp  IntegrationGpuBatchnormForwardInference.cpp  batchnorm_fwd_inference_integration_test.cpp
plugins/miopen_legacy_plugin/tests/: TestMiopenBatchnormBwdOperations.cpp  TestMiopenBatchnormFwdInferenceOperations.cpp  main.cpp  test_miopen_legacy_engine_plugin_api.cpp
plugins/miopen_legacy_plugin/tests/common/: BatchnormCommon.hpp  TestOperationsCommon.hpp
plugins/miopen_legacy_plugin/tests/mocks/: mock_engine.hpp  mock_solver.hpp
projects/composablekernel/dispatcher/examples/: CMakeLists.txt  README.md
projects/composablekernel/experimental/grouped_convolution_tile_instances/: CMakeLists.txt  generate_instances.py
projects/hipblas-common/next/: CMakeLists.txt
projects/hipblaslt/tensilelite/rocisa/: CMakeLists.txt  setup.py  tox-requirements.txt
projects/hipdnn/backend/src/: BackendEnumStringUtils.hpp  CMakeLists.txt  FlatbufferUtilities.cpp  FlatbufferUtilities.hpp  HipdnnBackend.cpp  HipdnnException.hpp  LastErrorManager.cpp  LastErrorManager.hpp  PlatformUtils.hpp  PlatformUtils.linux.cpp  PlatformUtils.windows.cpp  error.cpp  error.hpp  flatbuffer_utilities.cpp  flatbuffer_utilities.hpp  graph_instance.cpp  graph_instance.hpp  helpers.hpp  hipdnn_backend.cpp  platform_utils.hpp
projects/hipdnn/frontend/: CMakeLists.txt  README.md
projects/hipdnn/frontend/cmake/: hipdnn_frontendConfig.cmake.in
projects/hipdnn/frontend/include/: hipdnn_frontend.h  hipdnn_frontend.hpp  hipdnn_frontend_hello_world.hpp
projects/hipdnn/frontend/python/: CMakeLists.txt  attributes.cpp  hipdnn.cpp  types.cpp
projects/hipdnn/frontend/tests/: CMakeLists.txt  TestBatchnormAttributes.cpp  TestBatchnormBackwardNode.cpp  TestBatchnormInferenceNode.cpp  TestBatchnormInferenceNodeVarianceExt.cpp  TestBatchnormNode.cpp  TestConvolutionDgradAttributes.cpp  TestConvolutionDgradNode.cpp  TestGraph.cpp  (+25 more)
projects/hipdnn/plugin_sdk/: CMakeLists.txt  version.json
projects/hipdnn/python/: CMakeLists.txt  README.md  pyproject.toml
projects/hipdnn/samples/: CMakeLists.txt  README.MD  README.md  main.cpp
projects/hipdnn/sdk/: CMakeLists.txt
projects/hipsparselt/clients/: CMakeLists.txt
samples/: CMakeLists.txt  README.MD  main.cpp  perf_dgemm.cpp  perf_hgemm.cpp
samples/01_contraction/: simple_bilinear_contraction.hpp  simple_contraction_c.c  simple_scale_contraction.hpp
samples/02_elementwise/: CMakeLists.txt  elementwise_binary_c.c
samples/02_permutation/: permutation.cpp
samples/03_reduction/: CMakeLists.txt  reduction.cpp
samples/batchnorm/: BnTraining.cpp  bn_backward.cpp  bn_inference.cpp  bn_training.cpp
samples/utils/: helpers.hpp
(+5550 files in other folders)
