# Copyright © Advanced Micro Devices, Inc., or its affiliates.
# SPDX-License-Identifier:  MIT

cmake_minimum_required(VERSION 3.25.2)

# Enable PIC/PIE to ensure compatibility with the plugin loader system (dlopen). This prevents
# potential Thread Local Storage (TLS) model mismatches between the executable and dynamically
# loaded backend plugins.
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

project(hipdnn_samples VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)

find_package(hip REQUIRED)

# Technically this is all found as part of hipdnn_test_sdk, but including these as an example for
# consumers. hipdnn_test_sdk shouldn't be needed by normal users of hipDNN, and is only incuded here
# for validation purposes.
find_package(hipdnn_frontend CONFIG REQUIRED)
find_package(hipdnn_data_sdk CONFIG REQUIRED)

# !! NOTE !! - hipdnn_test_sdk is needed for sample validation, regular users of hipDNN do not need
# this package.
find_package(hipdnn_test_sdk CONFIG REQUIRED)

# Helper function to add a hipDNN sample executable NAME: The name of the executable target SOURCE:
# The source file for the sample
function(add_hipdnn_sample NAME SOURCE)
    add_executable(${NAME} ${SOURCE})
    # !! NOTE !! - hipdnn_test_sdk is needed for sample validation, regular users of hipDNN do not
    # need this package. Linking against hipdnn_frontend would be sufficient for normal users
    # (brings in hipdnn_data_sdk as well).
    target_link_libraries(${NAME} PRIVATE hip::host hipdnn_frontend hipdnn_test_sdk)
endfunction()

# Temporarily disabled bn_inference due to https://github.com/ROCm/rocm-libraries/issues/2459
# add_hipdnn_sample(bn_inference batchnorm/BnInference.cpp)
add_hipdnn_sample(bn_training batchnorm/BnTraining.cpp)
add_hipdnn_sample(fused_bn_training_activ batchnorm/FusedBnTrainingActiv.cpp)
add_hipdnn_sample(bn_backward batchnorm/BnBackward.cpp)
add_hipdnn_sample(fused_bn_inference_drelu_bn_backward batchnorm/FusedBnInfDReluBnBwd.cpp)

add_hipdnn_sample(conv_dgrad convolution/ConvDgrad.cpp)
add_hipdnn_sample(conv_fprop convolution/ConvFprop.cpp)
add_hipdnn_sample(fused_conv_fprop_activ convolution/FusedConvFpropActiv.cpp)
add_hipdnn_sample(fused_conv_fprop_bias_activ convolution/FusedConvFpropBiasActiv.cpp)
add_hipdnn_sample(conv_wgrad convolution/ConvWgrad.cpp)

# Enable testing and add sample tests
enable_testing()

# Helper function to add a hipDNN sample test
function(add_hipdnn_sample_test TARGET_NAME)
    add_test(NAME sample_${TARGET_NAME} COMMAND ${TARGET_NAME} --verify-cpu)
    set_tests_properties(sample_${TARGET_NAME} PROPERTIES LABELS "sample_test")
endfunction()

# Register convolution samples as tests
add_hipdnn_sample_test(conv_fprop)
add_hipdnn_sample_test(conv_dgrad)
add_hipdnn_sample_test(conv_wgrad)
add_hipdnn_sample_test(fused_conv_fprop_activ)
add_hipdnn_sample_test(fused_conv_fprop_bias_activ)

# Register batchnorm samples as tests
add_hipdnn_sample_test(bn_training)
add_hipdnn_sample_test(fused_bn_training_activ)
add_hipdnn_sample_test(bn_backward)
add_hipdnn_sample_test(fused_bn_inference_drelu_bn_backward)
# Note: bn_inference is currently disabled per issue #2459
